data/all_generated_tests/raw_wast_tests/nop_UnreachableCodeExecution_228.wast
;; 9. **Test Case 9: `nop` before and after control transfer instructions, eventually `unreachable`:**    - **Constraint Checked:** Proper handling of control transfer (e.g., `br`) with `nop` instructions.    - **Expected Behavior:** Control transfers as expected and hits `unreachable`, causing a trap.    - **Differential Behavior:** Initialization issues in wizard_engine could mismanage control flow.

(assert_invalid
  (module
    (func $test
      (block $label
        (nop)
        (br $label)
        (nop)
        (unreachable)
      )
    )
  )
  "invalid instruction after br"
)